--- a/app/src/main/res/layout/activity_add_category_view.xml
+++ b/app/src/main/res/layout/activity_add_category_view.xml
@@ -58,27 +58,11 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <LinearLayout
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/urlInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/ivImagePreview"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:scaleType="centerCrop"
-                    tools:src="@tools:sample/avatars" />
-
-                <Button
-                    android:id="@+id/btnSelectImage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:text="@string/select_image" />
-
-            </LinearLayout>
+                android:layout_marginTop="16dp"/>
 
             <Button
                 android:id="@+id/btnSubmit"
