--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,13 @@
                 android:layout_marginTop="16dp"
                 android:text="@string/orders" />
 
+            <Button
+                android:id="@+id/btnTickets"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/tickets" />
+
         </LinearLayout>
     </ScrollView>
 
