--- a/app/src/main/res/layout/activity_user_location_view.xml
+++ b/app/src/main/res/layout/activity_user_location_view.xml
@@ -20,10 +20,14 @@
         app:title="@string/location" />
 
     <com.mapbox.maps.MapView
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:mapbox="http://schemas.android.com/apk/res-auto"
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        mapbox:mapbox_cameraTargetLat="41.65606"
+        mapbox:mapbox_cameraTargetLng="-0.87734"
+        mapbox:mapbox_cameraZoom="9.0"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
